Mise à jour du site et correction des fichiers invalides

--- a/index.html
+++ b/index.html
@@ -1,103 +1,91 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Eugénie Fernet</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
-<body class="homepage"> <!-- Ajout de la classe homepage -->
 
+<body class="homepage">
     <header>
-        <!-- Section du logo qui sera sticky -->
         <div class="logo">
             <a href="a-propos.html">
                 <img src="img/illus/eug.png" alt="Eugénie Fernet">
             </a>
         </div>
-        
-        <!-- Icônes en haut à droite -->
         <div class="icon-links">
             <ul>
                 <li><a href="https://www.instagram.com/eugenie_graphisme/">
-                    <img src="img/illus/insta.jpg" alt="graphisme">
-                </a></li>
+                        <img src="img/illus/insta.jpg" alt="Instagram">
+                    </a></li>
             </ul>
         </div>
     </header>
 
     <main class="grid-container">
-        <a href="gaufrage.html" class="grid-item horizontal">
-            <img src="img/workshop/titre.jpg" alt="workshop">
+        <a href="projets/gaufrage.html" class="grid-item horizontal">
+            <img src="img/workshop/titre.jpg" alt="Gaufrage Party">
             <div class="overlay"><span>GAUFRAGE PARTY</span></div>
         </a>
-        <a href="guinness.html" class="grid-item horizontal">
-            <img src="img/POSTERGUINNESS/26.jpeg" alt="Dessin">
-            <div class="overlay"><span>GUINNESS' POSTER</span></div>
+        <a href="projets/guinness-poster.html" class="grid-item horizontal">
+            <img src="img/POSTERGUINNESS/26.jpeg" alt="Guinness Poster">
+            <div class="overlay"><span>GUINNESS POSTER</span></div>
         </a>
-        <a href="deni.html" class="grid-item vertical">
-            <img src="img/DENI/10.jpeg" alt="aerial">
+        <a href="projets/deni.html" class="grid-item vertical">
+            <img src="img/DENI/10.jpeg" alt="Déni">
             <div class="overlay"><span>DÉNI</span></div>
         </a>
-        <a href="arnauds.html" class="grid-item horizontal">
-            <img src="img/arnauds/int1.jpeg" alt="Dessin">
+        <a href="projets/arnauds.html" class="grid-item horizontal">
+            <img src="img/arnauds/int1.jpeg" alt="Arnauds">
             <div class="overlay"><span>ARNAUDS</span></div>
         </a>
-       <!-- <a href="galeriephoto.html" class="grid-item vertical">
-            <img src="img/PHOTOS/7.jpeg" alt="photos">
-            <div class="overlay"><span>GALERIE PHOTO</span></div>
-        </a> -->
-        <a href="aerial.html" class="grid-item vertical">
-            <img src="img/Aerial/affiche1.2.jpg" alt="aerial">
+        <a href="projets/aerial.html" class="grid-item vertical">
+            <img src="img/Aerial/affiche1.2.jpg" alt="Aerial">
             <div class="overlay"><span>AERIAL</span></div>
-            </a>
-        <a href="vidaloca.html" class="grid-item vertical">
-            <img src="img/VIDA LOCA/5.jpeg" alt="autoportraits">
+        </a>
+        <a href="projets/vida-loca.html" class="grid-item vertical">
+            <img src="img/VIDA LOCA/5.jpeg" alt="Vida Loca">
             <div class="overlay"><span>VIDA LOCA</span></div>
         </a>
-        <a href="loutres.html" class="grid-item horizontal">
-            <img src="img/DESSIN/4.jpeg" alt="Dessin">
+        <a href="projets/loutre-cendree.html" class="grid-item horizontal">
+            <img src="img/DESSIN/4.jpeg" alt="La Loutre Cendrée">
             <div class="overlay"><span>LA LOUTRE CENDRÉE</span></div>
         </a>
-        <a href="flipside.html" class="grid-item horizontal">
-            <img src="img/flipside/animotifs.gif" alt="Branding">
+        <a href="projets/flip-side.html" class="grid-item horizontal">
+            <img src="img/flipside/animotifs.gif" alt="Flip Side">
             <div class="overlay"><span>FLIP SIDE</span></div>
-             </a>
-        <a href="guinness2.html" class="grid-item vertical">
-                <img src="img/guinness dessins/IMG_1246.png" alt="photos">
-                <div class="overlay"><span>A GUINNESS A DAY</span></div>
-            </a>
-         <a href="toukiter.html" class="grid-item horizontal">
+        </a>
+        <a href="projets/guinness-day.html" class="grid-item vertical">
+            <img src="img/guinness dessins/IMG_1246.png" alt="A Guinness A Day">
+            <div class="overlay"><span>A GUINNESS A DAY</span></div>
+        </a>
+        <a href="projets/toukiter.html" class="grid-item horizontal">
             <img src="img/TOUKITER/boites1.jpg" alt="Toukiter">
             <div class="overlay"><span>TOUKITER</span></div>
         </a>
-        <a href="guitare.html" class="grid-item vertical">
-            <img src="img/GUITARE/gui.jpeg" alt="Volume">
+        <a href="projets/france-gall.html" class="grid-item vertical">
+            <img src="img/GUITARE/gui.jpeg" alt="France Gall">
             <div class="overlay"><span>FRANCE GALL</span></div>
         </a>
-        <a href="treppenwitz.html" class="grid-item horizontal">
+        <a href="projets/treppenwitz.html" class="grid-item horizontal">
             <img src="img/TREPPENWITZ/mockt1.jpeg" alt="Treppenwitz">
             <div class="overlay"><span>TREPPENWITZ</span></div>
         </a>
-        <a href="tt2.html" class="grid-item horizontal">
-            <img src="img/tennis tournaments 2/4.jpeg" alt="Magazine">
+        <a href="projets/tennis-2.html" class="grid-item horizontal">
+            <img src="img/tennis tournaments 2/4.jpeg" alt="Tennis Tournaments 2">
             <div class="overlay"><span>TENNIS TOURNAMENTS 2</span></div>
         </a>
-        <a href="tt1.html" class="grid-item vertical">
-            <img src="img/tennis tournaments 1/4.jpeg" alt="Magazine">
+        <a href="projets/tennis-1.html" class="grid-item vertical">
+            <img src="img/tennis tournaments 1/4.jpeg" alt="Tennis Tournaments 1">
             <div class="overlay"><span>TENNIS TOURNAMENTS 1</span></div>
         </a>
-         </a>
-        <a href="livres.html" class="grid-item horizontal">
-        <img src="img/LIVRES/1.jpeg" alt="Magazine">
-        <div class="overlay"><span>COUVERTURE DE LIVRES</span></div>
-         </a>
+        <a href="projets/livres.html" class="grid-item horizontal">
+            <img src="img/LIVRES/1.jpeg" alt="Couverture de Livres">
+            <div class="overlay"><span>COUVERTURE DE LIVRES</span></div>
         </a>
-         <!-- <a href="alterego.html" class="grid-item vertical">
-            <img src="img/alter ego/3356.jpeg" alt="autoportraits">
-            <div class="overlay"><span>ALTER-EGO</span></div>
-        </a> -->
     </main>
 
     <footer class="site-footer">
@@ -106,6 +94,7 @@
         </div>
     </footer>
 
+    <script src="js/script.js"></script>
 </body>
-</html>
 
+</html>
