--- a/a-propos.html
+++ b/a-propos.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À Propos - Eugénie Fernet</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
+
 <body class="inner-page">
     <header>
-        <!-- Logo sticky -->
+        <a href="index.html" class="back-arrow">←</a>
         <div class="logo">
             <a href="index.html">
                 <img src="img/illus/eug.png" alt="Eugénie Fernet">
             </a>
         </div>
-        
-        <!-- Icônes en haut à droite -->
         <div class="icon-links">
             <ul>
                 <li><a href="https://www.instagram.com/eugenie_graphisme/">
-                    <img src="img/illus/insta.jpg" alt="graphisme">
-                </a></li>
+                        <img src="img/illus/insta.jpg" alt="Instagram">
+                    </a></li>
             </ul>
         </div>
     </header>
 
-    <!-- Contenu principal : image + texte -->
     <main class="about-container">
         <div class="about-image">
             <img src="img/illus/rouenb.jpg" alt="Eugénie Fernet">
@@ -34,10 +33,13 @@
         <div class="about-text">
             <h1>À PROPOS DE MOI</h1>
             <p>
-                Bonjour !
-                Je m'appelle Eugénie Fernet, je suis en troisième année de design graphique à l'École Supérieure d'Art et de Design d'Amiens. Curieuse et créative, j'aime expérimenter, composer, et tester de nouvelles approches. J'apprécie particulièrement de créer un projet de sa conception à sa réalisation (choix des couleurs, du papier, impression, reliure).
+                Bonjour ! Je m'appelle Eugénie Fernet, je suis en troisième année de design graphique à l'École
+                Supérieure d'Art et de Design d'Amiens. Curieuse et créative, j'aime expérimenter, composer, et tester
+                de nouvelles approches. J'apprécie particulièrement de créer un projet de sa conception à sa réalisation
+                (choix des couleurs, du papier, impression, reliure).
                 <br><br>
-                Je fais aussi beaucoup de photographie (numérique et argentique). J'aime jouer avec la lumière et explorer différentes esthétiques visuelles.
+                Je fais aussi beaucoup de photographie (numérique et argentique). J'aime jouer avec la lumière et
+                explorer différentes esthétiques visuelles.
             </p>
         </div>
     </main>
@@ -48,5 +50,7 @@
         </div>
     </footer>
 
+    <script src="js/script.js"></script>
 </body>
+
 </html>
